# transfer-learning

./: README.md  UPDATES.md  install.bat  install.sh  pyproject.toml  setup.py
src/transfer_learning/: __init__.py  cli.py  config.py  plan.md
src/transfer_learning/core/: __init__.py  audio_transcriber.py  content_analyzer.py  frame_extractor.py  video_processor.py
src/transfer_learning/guide/: generator.py  parser.py  templates.py
src/transfer_learning/models/: __init__.py  base.py  guide.py  process.py  video.py  videoProcessing.py
src/transfer_learning/monitoring/: logger.py  metrics.py
src/transfer_learning/utils/: cache.py  downloader.py  formatting.py  path.py  process.py  text_processor.py  utils.py  validation.py
src/transfer_learning/video_processing/: processor.py
